Добавил верстку списка и переход на экран деталей.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
 
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Coil
+    implementation("io.coil-kt:coil-compose:1.4.0")
 }
